kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greet-me
  labels:
    app: greet-me
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greet-me
  template:
    metadata:
      labels:
        app: greet-me
    spec:
      containers:
      - name: greet-me
        image: ghcr.io/veerendra2/greet-me-flask-app/greet-me:v0.1
        imagePullPolicy: Always
      - name: nginx
        image: nginx:1.24.0-alpine
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
      imagePullSecrets:
        - name: regcred
