kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greet-me
spec:
  selector:
    app: greet-me
  ports:
    - name: http
      port: 80
      targetPort: 80
