kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greet-me-ingress
spec:
  ingressClassName: ngrok
  rules:
    - host: greet-me.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greet-me
                port:
                  number: 80
